boulder/boulder/tests/compile_fail/hir/unknown_variable.bo
fn a(a: u32) -> u32 {
    ab
}